# AtomicGameEngine

./: .crosscompile.sh  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS.md  BACKERS.md  BuildAtomic.bat  BuildAtomic.sh  Build_AtomicEditor.bat  Build_AtomicEditor.sh  CMakeLists.txt  CMake_Linux.sh  CMake_Makefile.sh  CMake_VS2015.bat  CMake_VS2017 OpenGL.bat  CMake_VS2017.bat  CMake_VS2022.bat  CMake_XCode.sh  CONTRIBUTING.md  CONTRIBUTION_LICENSE.md  Credits.md  Credits.txt  JSComponent.cpp  Jakefile  LICENSE.md  LICENSE_ATOMIC_EDITOR_AND_TOOLS.md  LICENSE_ATOMIC_RUNTIME.md  LICENSE_THIRDPARTY.md  License.txt  Makefile  Notes.txt  README.md  Rakefile  THIRDPARTY_LICENSE.md  appveyor.yml
AtomicEditor/: CMakeLists.txt
AtomicEditor/EditorApplicationData/ExampleInfo/: Examples.json
AtomicEditor/Source/: AEApplication.cpp  AEApplication.h  AEEditor.cpp  AEEditor.h  AEEvents.cpp  AEEvents.h  AEJavascript.cpp  AEJavascript.h  AEPreferences.cpp  AEPreferences.h  AETypes.h  AEVersion.h  AtomicEditor.h
AtomicEditor/Source/Editors/: JSResourceEditor.cpp  JSResourceEditor.h  ModelResourceEditor.cpp  ModelResourceEditor.h  ResourceEditor.cpp  ResourceEditor.h  SceneResourceEditor.cpp  SceneResourceEditor.h  TextResourceEditor.cpp  TextResourceEditor.h
AtomicEditor/Source/Import/: AEImportJSON.cpp  AEImportJSON.h  AEJSONSceneProcess.cpp  AEJSONSceneProcess.h
AtomicEditor/Source/Javascript/: JSAST.cpp  JSAST.h  JSASTSyntaxColorVisitor.cpp  JSASTSyntaxColorVisitor.h  JSASTVisitor.cpp  JSASTVisitor.h  JSAutocomplete.cpp  JSAutocomplete.h  JSErrorChecker.cpp  JSErrorChecker.h  JSSpiderMonkeyVM.cpp  JSSpiderMonkeyVM.h  JSTheme.h
AtomicEditor/Source/License/: AELicenseSystem.cpp  AELicenseSystem.h  AEVersionCheck.cpp  UIActivation.cpp  UIActivation.h  UIActivationSuccess.cpp  UIActivationSuccess.h  UIManageLicense.cpp  UIManageLicense.h
AtomicEditor/Source/Net/: CurlManager.cpp  CurlManager.h
AtomicEditor/Source/Player/: AEPlayer.cpp  AEPlayer.h
AtomicEditor/Source/Project/: AEProject.cpp  AEProject.h  ProjectUtils.cpp  ProjectUtils.h
AtomicEditor/Source/Resources/: AEComponent.h  AEResourceOps.cpp  AEResourceOps.h
AtomicEditor/Source/Subprocess/: AESubprocess.cpp  AESubprocess.h  AESubprocessSystem.cpp  AESubprocessSystem.h
AtomicEditor/Source/UI/: AEWidget.cpp  AEWidget.h  UIConsoleWidget.cpp  UIConsoleWidget.h  UIErrorsWidget.cpp  UIErrorsWidget.h  UIFindTextWidget.cpp  UIFindTextWidget.h  UIIssuesWidget.cpp  UIIssuesWidget.h  UIListView.cpp  UIListView.h  UIMainFrame.cpp  UIMainFrame.h  UIMainToolbar.cpp  UIMainToolbar.h  UIPlayerWidget.cpp  UIPlayerWidget.h  UIProjectFrame.cpp  UIProjectFrame.h  UIResourceFrame.cpp  UIResourceFrame.h  UIWelcomeFrame.cpp  UIWelcomeFrame.h
Attic/NETNative/: AtomicSharpApp.cpp  AtomicSharpApp.h  CMakeLists.txt
Source/: CMakeLists.txt
Source/Atomic/: Atomic.h  Atomic.pc.in  CMakeLists.txt  Precompiled.h  Revision.cpp  Revision.h  librevision.h
Source/Atomic/Atomic2D/: AnimatedSprite2D.cpp  AnimatedSprite2D.h  Animation2D.cpp  Animation2D.h  AnimationSet2D.cpp  AnimationSet2D.h  Atomic2D.cpp  Atomic2D.h  Atomic2DEvents.h  CollisionBox2D.cpp  CollisionBox2D.h  CollisionChain2D.cpp  CollisionChain2D.h  CollisionCircle2D.cpp  CollisionCircle2D.h  CollisionEdge2D.cpp  CollisionEdge2D.h  CollisionPolygon2D.cpp  CollisionPolygon2D.h  CollisionShape2D.cpp  CollisionShape2D.h  Constraint2D.cpp  Constraint2D.h  ConstraintDistance2D.cpp  ConstraintDistance2D.h  ConstraintFriction2D.cpp  ConstraintFriction2D.h  ConstraintGear2D.cpp  ConstraintGear2D.h  ConstraintMotor2D.cpp  ConstraintMotor2D.h  ConstraintMouse2D.cpp  ConstraintMouse2D.h  ConstraintPrismatic2D.cpp  ConstraintPrismatic2D.h  ConstraintPulley2D.cpp  ConstraintPulley2D.h  ConstraintRevolute2D.cpp  ConstraintRevolute2D.h  ConstraintRope2D.cpp  (+39 more)
Source/Atomic/Atomic3D/: AnimatedModel.cpp  AnimatedModel.h  Animation.cpp  Animation.h  AnimationController.cpp  AnimationController.h  AnimationState.cpp  AnimationState.h  Atomic3D.cpp  Atomic3D.h  BillboardSet.cpp  BillboardSet.h  DecalSet.cpp  (+23 more)
Source/AtomicApp/: AppBase.cpp  AppBase.h  CMakeLists.txt  IPCClientApp.cpp  IPCClientApp.h  IPCServerApp.cpp  IPCServerApp.h
Source/AtomicBuildInfo/: .gitignore  AtomicBuildInfo.cpp  AtomicBuildInfo.h  CMakeLists.txt
Source/AtomicCLI/: AtomicCLI.cpp  CLI.cpp  CLI.h  CMakeLists.txt
Source/AtomicEditor/: AtomicEditorMac.cmake  CMakeLists.txt
Source/AtomicEditorWork/: CMakeLists.txt
Source/AtomicGlow/: AtomicGlowApp.cpp  AtomicGlowApp.h  CMakeLists.txt  ModelAOBake.cpp  ModelAOBake.h  Raster.cpp
Source/AtomicJS/: CMakeLists.txt
Source/AtomicMasterServer/: app.js  package.json
Source/AtomicNET/: CMakeLists.txt
Source/AtomicPlayer/: AtomicPlayer.cpp  CMakeLists.txt  Player.cpp  Player.h  PlayerEvents.h
Source/AtomicPlayerJS/: AtomicPlayerJS.cpp  CMakeLists.txt
Source/AtomicSharp/: AtomicSharp.cpp  AtomicSharpAPI.cpp  AtomicSharpAPI.h  AtomicSharpApp.cpp  AtomicSharpApp.h  CMakeLists.txt  CSComponent.cpp  CSComponent.h  CSEventHelper.cpp  CSEventHelper.h  CSScriptObject.cpp  CSScriptObject.h
Source/AtomicTool/: AtomicTool.cpp  AtomicTool.h  CMakeLists.txt
Source/AtomicWebView/: AtomicWebView.h  CMakeLists.txt  UIWebView.cpp  UIWebView.h  WebBrowserHost.cpp  WebBrowserHost.h  WebBrowserHost.mm  WebClient.cpp  WebClient.h  WebKeyboard.h  WebKeyboardLinux.cpp  WebKeyboardMac.cpp  WebKeyboardSDL.cpp  WebKeyboardSDL.h  WebKeyboardWindows.cpp  WebMessageHandler.cpp  WebMessageHandler.h  WebRenderHandler.cpp  WebRenderHandler.h  WebRenderer.cpp  WebRenderer.h  WebSchemeHandler.cpp  WebSchemeHandler.h  WebString.cpp  WebString.h  WebTexture2D.cpp  WebTexture2D.h  WebViewEvents.h  WebViewJS.cpp
Source/MyProject/: CMakeLists.txt  MyNativeComponent.cpp  MyNativeComponent.h  MyProjectModule.cpp
Source/Samples/: CMakeLists.txt  Sample.h  Sample.inl
Source/ToolCore/: CMakeLists.txt  ToolEnvironment.cpp  ToolEnvironment.h  ToolEvents.h  ToolPrefs.cpp  ToolPrefs.h  ToolSystem.cpp  ToolSystem.h
Source/ToolCoreJS/: CMakeLists.txt  ToolCoreJS.cpp
Source/Tools/: CMakeLists.txt
(+2670 files in other folders)
