option(ATOMIC_JAVASCRIPT "Build JS Bindings" ON)
option(ATOMIC_DOTNET "Build .NET Bindings" ON)
option(ATOMIC_EDITOR "Build Editor" ON)

add_subdirectory(ThirdParty)
add_subdirectory(Atomic)
add_subdirectory(AtomicPlayer)

if (ATOMIC_JAVASCRIPT)
    add_subdirectory(AtomicJS)
    add_subdirectory(AtomicPlayerJS)
endif ()

if (ATOMIC_WEBVIEW)
    add_subdirectory(AtomicWebView)
endif ()


if (NOT WEB)
    add_subdirectory(AtomicApp)
    if (ATOMIC_DOTNET)
        add_subdirectory(AtomicNET)
    endif ()
endif ()

if (NOT IOS AND NOT ANDROID AND NOT WEB)
    add_subdirectory(AtomicTool)
    add_subdirectory(Tools)
    add_subdirectory(ToolCore)
    if (ATOMIC_JAVASCRIPT)
        add_subdirectory(ToolCoreJS)
    endif ()
    if (ATOMIC_WEBVIEW)
        if (ATOMIC_EDITOR)
            add_subdirectory(AtomicEditor)
        endif ()
    endif ()
endif ()

include(AtomicDocList)
